k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-app-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: spring-app
  ports:
    - name: http
      port: 8080
      targetPort: 8080
